Try possible fix for back-to-top-button on mobile devices

--- a/src/app/shared/components/back-to-top-button/back-to-top-button.component.scss
+++ b/src/app/shared/components/back-to-top-button/back-to-top-button.component.scss
@@ -34,7 +34,7 @@
 
         // Only apply bottom padding if there's a bottom bar
         @supports (padding-bottom: env(safe-area-inset-bottom)) {
-            bottom: min($mobile-nav-height + 24px + env(safe-area-inset-bottom), $mobile-nav-height + 24px);
+            bottom: min($mobile-nav-height + 24px + env(safe-area-inset-bottom), $mobile-nav-height + 40px);
         }
 
         // For Android devices with bottom navigation bar
